--- a/anmeldetool-web/src/main/web/src/index.html
+++ b/anmeldetool-web/src/main/web/src/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="utf-8">
-  <title>AtApp</title>
+  <title>ZTV Geräteturnen Anmeldetool</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -11,6 +11,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="container-fluid mat-typography">
-  <app-anmelde-tool>loading</app-anmelde-tool>
+  <app-anmelde-tool>loading...</app-anmelde-tool>
 </body>
 </html>
