--- a/anmeldetool-web/src/main/web/src/index.html
+++ b/anmeldetool-web/src/main/web/src/index.html
@@ -1,16 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="de">
-<head>
-  <meta charset="utf-8">
-  <title>ZTV Geräteturnen Anmeldetool</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
-<body class="container-fluid mat-typography">
-  <app-anmelde-tool>loading...</app-anmelde-tool>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>ZTV Geräteturnen Anmeldetool</title>
+    <base href="/ztv-anmeldetool" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="container-fluid mat-typography">
+    <app-anmelde-tool>loading...</app-anmelde-tool>
+  </body>
 </html>
