--- a/anmeldetool-web/src/main/web/src/index.html
+++ b/anmeldetool-web/src/main/web/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>ZTV Geräteturnen Anmeldetool</title>
-    <base href="/ztv-anmeldetool" />
+    <base href="/ztv-anmeldetool/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
