--- a/anmeldetool-server/src/main/resources/mail-templates/anmelde-status.html
+++ b/anmeldetool-server/src/main/resources/mail-templates/anmelde-status.html
@@ -16,6 +16,7 @@
     <h1 th:text="${titel}"></h1>
     <h2 th:text="${vereinsname}"></h2>
     <h2 th:text="${startet}"></h2>
+    <h2 th:text="${datumText} + ' : ' + ${datum}"></h2>
     <br>
 	<table>
 		<tr>
